# chronocatalog-desktop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ChronoCatalog.spec  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: make_icon.py
demo/: make_demo.py
src/chronocatalog_desktop/: __init__.py  __main__.py  app.py  base.py  buckets.py  history.py  import_view.py  organize.py  overview.py  relocate.py  rename.py  settings.py  theme.py  verify.py  worker.py
tests/: conftest.py  support.py  test_app.py  test_cli_panel.py  test_history_view.py  test_import_view.py  test_organize_view.py  test_relocate_view.py  test_rename_dam.py  test_rename_view.py  test_scale.py  test_settings_view.py  test_theme.py  test_verify_view.py  test_worker.py
