[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "chronocatalog-desktop"
description = "Desktop app for ChronoCatalog photo and video archives"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jakub Stefanski", email = "js@jakubstefanski.com" }]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
    "PySide6>=6.7",
    "chronocatalog>=0.2",
    "tomlkit>=0.12",
]
keywords = ["photography", "video", "exif", "rename", "archive", "gui", "qt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: System :: Archiving",
]

[project.urls]
Homepage = "https://github.com/chronocatalog/chronocatalog-desktop"
Repository = "https://github.com/chronocatalog/chronocatalog-desktop"
Changelog = "https://github.com/chronocatalog/chronocatalog-desktop/blob/main/CHANGELOG.md"
Issues = "https://github.com/chronocatalog/chronocatalog-desktop/issues"

[project.gui-scripts]
chronocatalog-desktop = "chronocatalog_desktop.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.version]
path = "src/chronocatalog_desktop/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/chronocatalog_desktop"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "PT",  # pytest style
    "RUF", # ruff-specific
]

[tool.mypy]
strict = true
files = ["src/chronocatalog_desktop", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["chronocatalog_desktop"]
omit = ["*/__main__.py"]
